--- a/gapic-generator-java/src/test/java/com/google/api/generator/engine/ast/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/engine/ast/BUILD.bazel
@@ -16,6 +16,7 @@ TESTS = [
     "IfStatementTest",
     "InstanceofExprTest",
     "JavaDocCommentTest",
+    "LambdaExprTest",
     "MethodDefinitionTest",
     "NewObjectExprTest",
     "NullObjectValueTest",
