--- a/gax-java/build.gradle
+++ b/gax-java/build.gradle
@@ -365,7 +365,7 @@ subprojects {
         }
         repositories {
           maven {
-            url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+            url 'https://google.oss.sonatype.org/service/local/staging/deploy/maven2/'
             credentials {
               username = project.hasProperty('ossrhUsername') ? project.getProperty('ossrhUsername') : null
               password = project.hasProperty('ossrhPassword') ? project.getProperty('ossrhPassword') : null
