--- a/gax-java/gax-bom/build.gradle
+++ b/gax-java/gax-bom/build.gradle
@@ -84,7 +84,7 @@ afterEvaluate {
     }
     repositories {
       maven {
-        url 'https://oss.sonatype.org/service/local/staging/deploy/maven2/'
+        url 'https://google.oss.sonatype.org/service/local/staging/deploy/maven2/'
         credentials {
           username = project.hasProperty('ossrhUsername') ? project.getProperty('ossrhUsername') : null
           password = project.hasProperty('ossrhPassword') ? project.getProperty('ossrhPassword') : null
