--- a/test/integration/apis/kms/v1/cloudkms_test_mixins_v1.yaml
+++ b/test/integration/apis/kms/v1/cloudkms_test_mixins_v1.yaml
@@ -16,13 +16,13 @@ documentation:
     Manages keys and performs cryptographic operations in a central cloud
     service, for direct use by other cloud resources and applications.
   rules:
-  # This RPC shouldn't appear in the proto, since it's been cloberred by KMS's definition in the proto.
+  # This RPC shouldn't appear in the proto, since it's been clobered by KMS's definition in the proto.
   - selector: google.iam.v1.IAMPolicy.GetIamPolicy
     description: |-
       Gets the access control policy for a resource. Returns an empty policy
       if the resource exists and does not have a policy set.
 
-  # This RPC shouldn't appear in the proto, since it's not in the HTTP rules list below, 
+  # This RPC shouldn't appear in the proto, since it's not in the HTTP rules list below,
   # even though the documentation field is set.
   - selector: google.iam.v1.IAMPolicy.SetIamPolicy
     description: |-
