--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/rest/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/composer/rest/BUILD.bazel
@@ -4,17 +4,15 @@ load("//:rules_bazel/java/java_diff_test.bzl", "golden_update")
 package(default_visibility = ["//visibility:public"])
 
 TESTS = [
-    "GrpcServiceCallableFactoryClassComposerTest",
-    "GrpcServiceStubClassComposerTest",
-    "MockServiceClassComposerTest",
-    "MockServiceImplClassComposerTest",
+    "HttpJsonServiceCallableFactoryClassComposerTest",
+    "HttpJsonServiceStubClassComposerTest",
     "ServiceClientTestClassComposerTest",
     "ServiceSettingsClassComposerTest",
     "ServiceStubSettingsClassComposerTest",
 ]
 
 COMMON_SRCS = [
-    "GrpcTestProtoLoader.java",
+    "RestTestProtoLoader.java",
 ]
 
 TEST_DEPS = [
@@ -24,7 +22,7 @@ TEST_DEPS = [
     "//src/main/java/com/google/api/generator/engine/writer",
     "//src/main/java/com/google/api/generator/gapic/composer",
     "//src/main/java/com/google/api/generator/gapic/composer/common",
-    "//src/main/java/com/google/api/generator/gapic/composer/grpc",
+    "//src/main/java/com/google/api/generator/gapic/composer/rest",
     "//src/test/java/com/google/api/generator/gapic/composer/common",
     "//src/test/java/com/google/api/generator/test/framework:asserts",
     "//src/test/java/com/google/api/generator/test/framework:utils",
@@ -33,7 +31,9 @@ TEST_DEPS = [
     "//src/main/java/com/google/api/generator/gapic/model",
     "//src/main/java/com/google/api/generator/gapic/protoparser",
     "//src/main/java/com/google/api/generator/gapic/composer/defaultvalue",
+    "//src/test/java/com/google/api/generator/gapic/testdata:deprecated_service_java_proto",
     "//src/test/java/com/google/api/generator/gapic/testdata:showcase_java_proto",
+    "//src/test/java/com/google/api/generator/gapic/testdata:testgapic_java_proto",
     "@com_google_api_api_common//jar",
     "@com_google_api_gax_java//gax",
     "@com_google_api_api_common",
@@ -72,15 +72,15 @@ java_proto_library(
         "{0}.java".format(test_name),
     ] + COMMON_SRCS,
     data = [
-        "//src/test/java/com/google/api/generator/gapic/composer/grpc/goldens:goldens_files",
+        "//src/test/java/com/google/api/generator/gapic/composer/rest/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.grpc.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.rest.{0}".format(test_name),
     deps = TEST_DEPS,
 ) for test_name in TESTS]
 
-# Run `bazel run src/test/java/com/google/api/generator/gapic/composer/grpc:testTargetName_update`
+# Run `bazel run src/test/java/com/google/api/generator/gapic/composer/rest:testTargetName_update`
 # to update goldens as expected generated code.
 # `ServiceClient*` tests are not supported now since they are still in active development.
 
@@ -90,10 +90,10 @@ java_proto_library(
         "{0}.java".format(test_name),
     ] + COMMON_SRCS,
     data = [
-        "//src/test/java/com/google/api/generator/gapic/composer/grpc/goldens:goldens_files",
+        "//src/test/java/com/google/api/generator/gapic/composer/rest/goldens:goldens_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:gapic_config_files",
         "//src/test/java/com/google/api/generator/gapic/testdata:service_config_files",
     ],
-    test_class = "com.google.api.generator.gapic.composer.grpc.{0}".format(test_name),
+    test_class = "com.google.api.generator.gapic.composer.rest.{0}".format(test_name),
     deps = TEST_DEPS,
 ) for test_name in TESTS]
