--- a/gapic-generator-java/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
+++ b/gapic-generator-java/src/test/java/com/google/api/generator/gapic/testdata/BUILD.bazel
@@ -39,6 +39,7 @@ proto_library(
         "echo.proto",
         "identity.proto",
         "testing.proto",
+        "compliance.proto",
     ],
     deps = [
         "@com_google_googleapis//google/api:annotations_proto",
