--- a/dependencies.properties
+++ b/dependencies.properties
@@ -4,7 +4,7 @@
 # The properties format is the following:
 #   <dependency_type>[.<artifact_name>]=<value>
 
-# Target workspace name: com_google_api_codegen
+# Target workspace name: gapic_generator_java
 
 # Versions only, for dependencies which actual artifacts differ between Bazel and Gradle
 version.com_google_protobuf=3.15.2
@@ -32,7 +32,7 @@ maven.org_threeten_threetenbp=org.threeten:threetenbp:1.3.3
 
 # Testing.
 maven.junit_junit=junit:junit:4.13.1
-# This hamcrest-core dependency is for running JUnit test manually, before JUnit 4.11 it's wrapped along with JUnit package. 
+# This hamcrest-core dependency is for running JUnit test manually, before JUnit 4.11 it's wrapped along with JUnit package.
 # But now it has to be explicitly added.
 maven.org_hamcrest_hamcrest_core=org.hamcrest:hamcrest-core:1.3
 maven.org_mockito_mockito_core=org.mockito:mockito-core:2.21.0
