--- a/api-common-java/build.gradle
+++ b/api-common-java/build.gradle
@@ -29,8 +29,8 @@ archivesBaseName = "api-common"
 
 project.version = "1.10.7-SNAPSHOT" // {x-version-update:api-common:current}
 
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 jacoco {
     toolVersion = "0.8.7"
@@ -45,7 +45,7 @@ ext {
       javax_annotations: 'javax.annotation:javax.annotation-api:1.3.2',
       auto_value: 'com.google.auto.value:auto-value:1.8.2',
       auto_value_annotations: 'com.google.auto.value:auto-value-annotations:1.8.2',
-      guava: 'com.google.guava:guava:30.1.1-android',
+      guava: 'com.google.guava:guava:30.1.1-jre',
       jsr305: 'com.google.code.findbugs:jsr305:3.0.2',
       error_prone_annotations: 'com.google.errorprone:error_prone_annotations:2.8.0',
 
