--- a/gax-java/.github/release-please.yml
+++ b/gax-java/.github/release-please.yml
@@ -7,3 +7,7 @@ branches:
   - releaseType: java-lts
     bumpMinorPreMajor: true
     branch: 1.64.0-sp
+  - bumpMinorPreMajor: true
+    handleGHRelease: true
+    releaseType: java-yoshi
+    branch: java7
